istioctl/cmd/testdata/auth/upgrade/cluster-rbac-config-on-with-exclusion.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: my-root-namespace
spec:
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns1-allow-all
  namespace: ns1
spec:
  rules:
    - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns2-allow-all
  namespace: ns2
spec:
  rules:
    - {}
---
