istioctl/cmd/testdata/auth/upgrade/cluster-rbac-config-on-with-inclusion.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_INCLUSION'
  inclusion:
    namespaces: ["default", "ns2"]
