istioctl/cmd/testdata/auth/upgrade/cluster-rbac-config-on-with-inclusion.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns2-deny-all
  namespace: ns2
spec:
---
