istioctl/cmd/testdata/auth/upgrade/group-in-subject.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: bind-service-viewers
  namespace: default
spec:
  subjects:
    - group: "foobar"
  roleRef:
    kind: ServiceRole
    name: "service-viewer"
