istioctl/cmd/testdata/auth/upgrade/multiple-access-rules-two-subjects.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-all
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    - source:
        namespaces:
        - default
        principals:
        - Coldplay
    to:
    - operation:
        methods:
        - GET
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-productpage
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    - source:
        namespaces:
        - default
        principals:
        - Coldplay
    to:
    - operation:
        methods:
        - POST
  selector:
    matchLabels:
      app: productpage
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-reviews
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    - source:
        namespaces:
        - default
        principals:
        - Coldplay
    to:
    - operation:
        methods:
        - POST
  selector:
    matchLabels:
      app: reviews
---
