istioctl/cmd/testdata/auth/upgrade/one-rule-all-services-with-exclusion.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: my-root-namespace
spec:
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns1-allow-all
  namespace: ns1
spec:
  rules:
    - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns2-allow-all
  namespace: ns2
spec:
  rules:
    - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-all
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    - source:
        namespaces:
        - default
        principals:
        - Coldplay
    to:
    - operation:
        methods:
        - GET
---
