istioctl/cmd/testdata/auth/upgrade/one-rule-all-services.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-services
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    - source:
        namespaces:
        - default
        principals:
        - Coldplay
    to:
    - operation:
        methods:
        - GET
---
