istioctl/cmd/testdata/auth/upgrade/one-rule-one-service.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: default
spec:
  rules:
    - services: ["productpage"]
      methods: ["GET"]
