istioctl/cmd/testdata/auth/upgrade/one-rule-one-service.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-default
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app: productpage
---
