istioctl/cmd/testdata/auth/upgrade/one-subject.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: bind-service-viewers
  namespace: default
spec:
  subjects:
    - properties:
        source.namespace: "istio-system"
  roleRef:
    kind: ServiceRole
    name: "service-viewer"
