istioctl/cmd/testdata/auth/upgrade/rbac-global-on.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: my-root-namespace
spec:
---
