istioctl/cmd/testdata/auth/upgrade/svc-bookinfo.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: default
spec:
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: default
spec:
  selector:
    app: productpage
---
